# InferX

./: .gitignore  .gitmodules  LICENSE  README.md  demo-day.py  ds.py  example_mobilenet.py  pyproject.toml  quickstart.sh  requirements.txt  setup.py  setup.sh  test_script.sh
data/: test_image.txt
docker/: README.md  ecr_push.sh
dockerize-model/: Modelfile
docs/: compatibility.mdx  docs.json  introduction.mdx  quickstart.mdx  setup.mdx
docs/guides/: custom-models.mdx  serving-models.mdx
docs/mobile/: android.mdx
docs/models/: deepseek.mdx  robopoint.mdx  sam2.mdx  whisper.mdx
docs/models/custom-models/: overview.mdx
examples/: download_sample_images.py  generate_test_image.py  robotpoint_example.py  run_robotpoint_demo.sh  test_lazy_loading.py
examples/clip/: client_grpc.py  example_clip.py
examples/custom_model/: example_optimize_custom_model.py
examples/deepseek_r1/: example_deepseek_r1.py
examples/mobilenet/: example_mobilenet.py
examples/resnet34/: example_resnet34.py
examples/robopoint/: README.md  example_robopoint.py  robopoint_simple.py
examples/sam2/: README.md  client.py  example_sam2.py  sam_components.py  server_code.py
exla/: __init__.py  device_detect.py  server.py
exla/models/: _base.py  base_model.py  device_detect.py
exla/models/clip/: __init__.py
exla/models/deepseek_r1/: __init__.py
exla/models/mobilenet/: __init__.py
exla/models/resnet34/: __init__.py
exla/models/robopoint/: README.md  __init__.py
exla/optimize/: __init__.py
exla/utils/: data_loader.py  dependency_manager.py  device_detect.py  resource_monitor.py
inferx/models/: _base.py
inferx/optimize/: __init__.py
inferx/utils/: __init__.py  resource_monitor.py
license/: license_validation.py
mobilenet/: example_mobilenet.py
tests/: test_dependency_loading.py
(+106 files in other folders)
