[project]
name = "exla-sdk"
version = "0.1.0"
description = "EXLA SDK for hardware-optimized ML models"
authors = [
    {name = "Viraat Das", email = "viraat@exla.ai"}
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exla"]

[tool.hatch.build.targets.sdist]
only-include = ["exla"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
repository = "https://github.com/exla-ai/exla-sdk"
