[project]
name = "inferx"
version = "0.1.0"
description = "InferX - Hardware-optimized inference toolkit for easy ML model testing across devices"
authors = [
    {name = "Viraat Das", email = "viraat@exla.ai"}
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inferx"]

[tool.hatch.build.targets.sdist]
only-include = ["inferx"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
repository = "https://github.com/exla-ai/inferx"
